add Projects section title

--- a/my-portfolio-frontend/src/app/pages/projects/projects.component.html
+++ b/my-portfolio-frontend/src/app/pages/projects/projects.component.html
@@ -1,5 +1,11 @@
 <div class="projects-main">
     <div class="container-xl">
+        <div class="row">
+            <div class="section-title aos-init aos-animate" data-aos="fade-up">
+                <h2>Projects</h2>
+                <p>My experience</p>
+              </div>
+        </div>
         <div class="grid">
             <div class="row gx-5">
                 <div class="col-12 col-sm-6 col-lg-4">
@@ -9,7 +15,7 @@
                             alt="Snowy Mountains">
                         <div class="card__content">
                             <p class="card__header">TechLead & Senior Developer</p>
-                            <p class="card__period">12/2024 - present</p>
+                            <p class="card__period">12/2023 - present</p>
                             <div class="card__badges">
                                 <span class="badge rounded-pill text-bg-primary">Java</span>
                                 <span class="badge rounded-pill text-bg-primary">Spring</span>
@@ -35,8 +41,8 @@
                     <div class="card"><img class="card__img"
                             src="https://independant.io/wp-content/uploads/logo-smile-pay.png" alt="Desert">
                         <div class="card__content">
-                            <p class="card__header">TechLead & Senior Developer</p>
-                            <p class="card__period">12/2024 - present</p>
+                            <p class="card__header">Senior Fullstack Developer</p>
+                            <p class="card__period">09/2021 - 12/2023</p>
                             <div class="card__badges">
                                 <span class="badge rounded-pill text-bg-primary">Java</span>
                                 <span class="badge rounded-pill text-bg-primary">Spring</span>
@@ -60,11 +66,10 @@
 
                 <div class="col-12 col-sm-6 col-lg-4">
                     <div class="card"><img class="card__img"
-                            src="https://maas-alliance.eu/wp-content/uploads/2020/07/INSTANT-System_WEB-e1593782173358.png"
-                            alt="Canyons">
+                            src="https://cdn.prod.website-files.com/5eccc619f1e74b5b125b7224/6321c51b1f8ef75c369dd308_Logo_InstantSystem.png">
                         <div class="card__content">
-                            <p class="card__header">TechLead & Senior Developer</p>
-                            <p class="card__period">12/2024 - present</p>
+                            <p class="card__header">Java / API Developer</p>
+                            <p class="card__period">02/2020 - 08/2021</p>
                             <div class="card__badges">
                                 <span class="badge rounded-pill text-bg-primary">Java</span>
                                 <span class="badge rounded-pill text-bg-primary">Spring</span>
@@ -88,11 +93,11 @@
 
                 <div class="col-12 col-sm-6 col-lg-4">
                     <div class="card"><img class="card__img"
-                            src="https://www.tourmag.com/photo/art/grande/8334013-13054962.jpg?v=1444214835"
+                            src="https://1000logos.net/wp-content/uploads/2022/05/Amadeus-Logo.png"
                             alt="Canyons">
                         <div class="card__content">
-                            <p class="card__header">TechLead & Senior Developer</p>
-                            <p class="card__period">12/2024 - present</p>
+                            <p class="card__header">Fullstack Developer</p>
+                            <p class="card__period">01/2019 - 02/2020</p>
                             <div class="card__badges">
                                 <span class="badge rounded-pill text-bg-primary">Java</span>
                                 <span class="badge rounded-pill text-bg-primary">Spring</span>
@@ -118,8 +123,8 @@
                             src="https://www.probatiment.com/wp-content/uploads/2022/01/mutuelle-pro-btp.jpg"
                             alt="Canyons">
                         <div class="card__content">
-                            <p class="card__header">TechLead & Senior Developer</p>
-                            <p class="card__period">12/2024 - present</p>
+                            <p class="card__header">Fullstack Developer</p>
+                            <p class="card__period">09/2017 - 01/2019</p>
                             <div class="card__badges">
                                 <span class="badge rounded-pill text-bg-primary">Java</span>
                                 <span class="badge rounded-pill text-bg-primary">Spring</span>
