--- a/my-portfolio-frontend/src/app/pages/projects/projects.component.html
+++ b/my-portfolio-frontend/src/app/pages/projects/projects.component.html
@@ -4,151 +4,37 @@
             <div class="section-title aos-init aos-animate" data-aos="fade-up">
                 <h2>Projects</h2>
                 <p>My experience</p>
-              </div>
+            </div>
         </div>
         <div class="grid">
             <div class="row gx-5">
-                <div class="col-12 col-sm-6 col-lg-4">
+                <div *ngFor="let projectSummary of projectSummaries" class="col-12 col-sm-6 col-lg-4">
                     <div class="card">
                         <img class="card__img"
-                            src="https://upload.wikimedia.org/wikipedia/fr/archive/7/77/20220206181136%21Logo_enedis_header.png"
-                            alt="Snowy Mountains">
+                            src="{{ projectSummary.logoUrl }}">
                         <div class="card__content">
-                            <p class="card__header">TechLead & Senior Developer</p>
-                            <p class="card__period">12/2023 - present</p>
+                            <p class="card__header">{{ projectSummary.title }}</p>
+                            <p class="card__period">{{ projectSummary.startDate | date: 'MM/yyyy' }} -
+                                {{ projectSummary.endDate ? (projectSummary.endDate | date: 'MM/yyyy') : 'present' }}
+                            </p>
                             <div class="card__badges">
-                                <span class="badge rounded-pill text-bg-primary">Java</span>
-                                <span class="badge rounded-pill text-bg-primary">Spring</span>
-                                <span class="badge rounded-pill text-bg-primary">Angular</span>
-                                <span class="badge rounded-pill text-bg-primary">PostgreSQL</span>
+                                <span *ngFor="let skillItem of projectSummary.topSkills"
+                                    class="badge rounded-pill text-bg-primary">
+                                    {{ skillItem?.skill?.name }}
+                                </span>
                                 <span class="badge rounded-pill text-bg-primary">...</span>
                             </div>
 
                             <div class="card__text-wrapper">
                                 <p class="card__text">
-                                    The <strong>capacity mechanism</strong> ensures France's electricity supply during
-                                    winter peaks
-                                    by requiring obligated parties to cover consumption and certifying generation
-                                    and demand response capacities.
+                                    {{ projectSummary.summary }}
                                 </p>
                                 <p class="card__seemore">...see more</p>
                             </div>
                         </div>
                     </div>
                 </div>
-
-                <div class="col-12 col-sm-6 col-lg-4">
-                    <div class="card"><img class="card__img"
-                            src="https://independant.io/wp-content/uploads/logo-smile-pay.png" alt="Desert">
-                        <div class="card__content">
-                            <p class="card__header">Senior Fullstack Developer</p>
-                            <p class="card__period">09/2021 - 12/2023</p>
-                            <div class="card__badges">
-                                <span class="badge rounded-pill text-bg-primary">Java</span>
-                                <span class="badge rounded-pill text-bg-primary">Spring</span>
-                                <span class="badge rounded-pill text-bg-primary">Angular</span>
-                                <span class="badge rounded-pill text-bg-primary">PostgreSQL</span>
-                                <span class="badge rounded-pill text-bg-primary">...</span>
-                            </div>
-
-                            <div class="card__text-wrapper">
-                                <p class="card__text">
-                                    The <strong>capacity mechanism</strong> ensures France's electricity supply during
-                                    winter peaks
-                                    by requiring obligated parties to cover consumption and certifying generation
-                                    and demand response capacities.
-                                </p>
-                                <p class="card__seemore">...see more</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-12 col-sm-6 col-lg-4">
-                    <div class="card"><img class="card__img"
-                            src="https://cdn.prod.website-files.com/5eccc619f1e74b5b125b7224/6321c51b1f8ef75c369dd308_Logo_InstantSystem.png">
-                        <div class="card__content">
-                            <p class="card__header">Java / API Developer</p>
-                            <p class="card__period">02/2020 - 08/2021</p>
-                            <div class="card__badges">
-                                <span class="badge rounded-pill text-bg-primary">Java</span>
-                                <span class="badge rounded-pill text-bg-primary">Spring</span>
-                                <span class="badge rounded-pill text-bg-primary">Angular</span>
-                                <span class="badge rounded-pill text-bg-primary">PostgreSQL</span>
-                                <span class="badge rounded-pill text-bg-primary">...</span>
-                            </div>
-
-                            <div class="card__text-wrapper">
-                                <p class="card__text">
-                                    The <strong>capacity mechanism</strong> ensures France's electricity supply during
-                                    winter peaks
-                                    by requiring obligated parties to cover consumption and certifying generation
-                                    and demand response capacities.
-                                </p>
-                                <p class="card__seemore">...see more</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-12 col-sm-6 col-lg-4">
-                    <div class="card"><img class="card__img"
-                            src="https://1000logos.net/wp-content/uploads/2022/05/Amadeus-Logo.png"
-                            alt="Canyons">
-                        <div class="card__content">
-                            <p class="card__header">Fullstack Developer</p>
-                            <p class="card__period">01/2019 - 02/2020</p>
-                            <div class="card__badges">
-                                <span class="badge rounded-pill text-bg-primary">Java</span>
-                                <span class="badge rounded-pill text-bg-primary">Spring</span>
-                                <span class="badge rounded-pill text-bg-primary">Angular</span>
-                                <span class="badge rounded-pill text-bg-primary">PostgreSQL</span>
-                                <span class="badge rounded-pill text-bg-primary">...</span>
-                            </div>
-
-                            <div class="card__text-wrapper">
-                                <p class="card__text">
-                                    The <strong>capacity mechanism</strong> ensures France's electricity supply during
-                                    winter peaks
-                                    by requiring obligated parties to cover consumption and certifying generation
-                                    and demand response capacities.
-                                </p>
-                                <p class="card__seemore">...see more</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-12 col-sm-6 col-lg-4">
-                    <div class="card"><img class="card__img"
-                            src="https://www.probatiment.com/wp-content/uploads/2022/01/mutuelle-pro-btp.jpg"
-                            alt="Canyons">
-                        <div class="card__content">
-                            <p class="card__header">Fullstack Developer</p>
-                            <p class="card__period">09/2017 - 01/2019</p>
-                            <div class="card__badges">
-                                <span class="badge rounded-pill text-bg-primary">Java</span>
-                                <span class="badge rounded-pill text-bg-primary">Spring</span>
-                                <span class="badge rounded-pill text-bg-primary">Angular</span>
-                                <span class="badge rounded-pill text-bg-primary">PostgreSQL</span>
-                                <span class="badge rounded-pill text-bg-primary">...</span>
-                            </div>
-
-                            <div class="card__text-wrapper">
-                                <p class="card__text">
-                                    The <strong>capacity mechanism</strong> ensures France's electricity supply during
-                                    winter peaks
-                                    by requiring obligated parties to cover consumption and certifying generation
-                                    and demand response capacities.
-                                </p>
-                                <p class="card__seemore">...see more</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
             </div>
-
-
         </div>
     </div>
 </div>
